# NoisyOscillator

./: CMakeLists.txt  Constants.h  Data_Analisys.ipynb  Makefile  README.md  Simulation.cpp  Simulation.hpp  SimulationParameters.cpp  SimulationParameters.h  Utilities.cpp  Utilities.h  oscillator.cpp  sim.cpp  sim.h  sim.hpp
Eigen/: CMakeCache.txt
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: private.xml
